--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,7 @@ author = "Brian Hines"
 title = "Brian Hines"
 pluralizelisttitles = false
 enableEmoji = true
+uglyurls = true
 
 [permalinks]
 words = "words/:slug/"
