--- a/config.toml
+++ b/config.toml
@@ -13,12 +13,12 @@ enableEmoji = true
 uglyurls = true
 
 [permalinks]
-words = "words/:slug/"
+notes = "notes/:slug/"
 
 [params]
 dateform = "Jan 2, 2006"
 dateformfull = "Mon Jan 2 2006 15:04:05 MST"
-description = "Example blog"
+description = "Brian Hines"
 logofile = "img/logo.png"
 faviconfile = "img/logo.png"
 highlightjs = true
