Set TTL on objects in CloudFront

--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -47,6 +47,7 @@ Resources:
             Aliases:
               - exitcodezero.io
             DefaultCacheBehavior:
+              DefaultTTL:               3600
               ForwardedValues:
                 QueryString:            TRUE
               TargetOriginId:           S3-exitcodezero.io-0
